# discord-ratelimit-reporter

./: .env.client.example  .env.server.example  Cargo.toml  Dockerfile  Dockerfile.client  LICENSE  README.md
.github/workflows/: build.yml  client-build.yml  server-build.yml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
