[package]
name = "discord-ratelimit-reporter"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.7"
log = "0.4.26"
reqwest = { version = "0.12.13", default-features = false, features = ["charset", "json", "rustls-tls"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros"] }
