[workspace]
members = [
    "server",
    "client",
]
resolver = "2"

[workspace.dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.7"
log = "0.4.26"
reqwest = { version = "0.12.14", default-features = false, features = ["charset", "json", "rustls-tls"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
