[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
dotenvy = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
